--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,6 +3,8 @@
     <ol>
         <li *ngFor="let item of equipmentItems">
             <!-- "Add to Cargo Hold" button goes here. -->
+            <button [disabled]="item.mass>(maximumAllowedMass-cargoMass)" [disabled]="(cargoHold.length === maxItems)" [class.active]="item.mass<=(maximumAllowedMass-cargoMass)" [class.active]="(!(cargoHold.length === maxItems))" (click)="addItem(item)">Add to Cargo Hold</button>
+            <!-- <button disabled>Can't Click Me!</button> -->
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -16,7 +18,8 @@
         <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass]="cargoMass>=1800">Mass Budget Remaining: {{maximumAllowedMass-cargoMass}} kg</p>
     <!-- Add the "Empty Hold" button here. -->
+    <button (click)="cargoMass=0;cargoHold=[];">Empty Hold</button>
 </div>
 
